src/css/food-menu.css
@tailwind components;
@tailwind utilities;

@layer components {
  #food-menu {
    /* background: url("../assets/svg/svg-bg.svg");
     position: relative;
      isolation: isolate;
      --skew-angle: -4deg;
      --background: #243047;
      margin-top: 80px; */

    .image {
      height: 50vh;
      object-fit: cover;
      object-position: center;
      border-radius: 4%;
      opacity: 0;
      transition: opacity 2s ease-in;
    }
    :is(.lunch-logo, .dinner-logo) img {
      -webkit-transition: 0.4s ease;
      transition: 0.4s ease;
    }

    a:hover :is(.lunch-logo, .dinner-logo) img  {
      -webkit-transform: scale(1.1);
      transform: scale(1.1);
    }

    .show-image {
      opacity: 1;
    }

    .dinner-logo-animation {
      animation: slideInFromRight 1s forwards;
    }

    .lunch-logo-animation {
      animation: slideInFromLeft 1s forwards 0.5s;
    }
  }

  /* #food-menu::before {
    content: " ";
    width: 100%;
    height: 10%;
    background:url("../assets/svg/svg-bg.svg");
    position: absolute;
    z-index: 1;
    inset: 0;
    transform: skewY(var(--skew-angle));
  }

  #food-menu::after {
    content: " ";
    width: 100%;
    height: 10%;
    background:url("../assets/svg/svg-bg.svg");
    position: absolute;
    z-index: -1;
    bottom: 3px;
    transform: skewY(var(--skew-angle));
  } */
}

@layer utilities {
  @keyframes bounce {
    from,
    20%,
    53%,
    80%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
      transform: translate3d(0px, 0, 0);
    }
    40%,
    43% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0px, -30px, 0);
    }
    70% {
      animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
      transform: translate3d(0px, -20px, 0);
    }
    90% {
      transform: translate3d(0px, -10px, 0);
    }
  }

  @keyframes slideInFromLeft {
    0% {
      transform: translateX(-100%);
      opacity: 0;
    }
    100% {
      transform: translateX(0);
      opacity: 1;
    }
  }

  @keyframes slideInFromRight {
    0% {
      transform: translateX(100%);
      opacity: 0;
    }
    100% {
      transform: translateX(0%);
      opacity: 1;
    }
  }
}

